--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ Django = "^5.0.3"
 ipython = "^8.22.2"
 django-pytest = "^0.2.0"
 django-extensions = "^3.2.3"
+faker = "^24.2.0"
+tqdm = "^4.66.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.2.0"
