--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ django-pytest = "^0.2.0"
 django-extensions = "^3.2.3"
 faker = "^24.2.0"
 tqdm = "^4.66.2"
+psycopg2 = "^2.9.9"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.2.0"
